# hermit

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  hermit.cabal
driver/: Main.hs
examples/: contents.txt
examples/HIW13/second/plugin/: SecondDemo.hs  hermit-second.cabal
examples/Haskell2012/: Append.hss  Fib.hs  Fib.hss  HList.hs  Makefile  Reverse.hs  Reverse.hss  ReversePrelude.hs  ReverseWWTactic.hss
examples/IFL2012/: Fib.hs  Fib.hss  Makefile  WWSplitTactic.hss
examples/Talks/: Fib.hs  Fib.hss  FibNat.hs  FibNatWW.hs  HList.hs  Rev.hs  Rev.hss  Reverse.hs  Reverse.hss
examples/casereduce/: CaseReduce.hermit  Main.hs  Makefile
examples/collatz/: Main.hs
examples/concatVanishes/: ConcatVanishes.hss  Flatten.hs  Flatten.hss  HList.hs  Makefile  QSort.hs  QSort.hss  Rev.hs  Rev.hss  Reverse.hs
examples/dictionaries/: Dictionaries.hs  Dictionaries.hss
examples/evaluation/: Eval.hs  Eval.hss  Makefile  WW-Ass-A.hss
examples/factorial/: Fac.hs  Fac.hss  WW-Ass-A.hss
examples/fib/: Fib.hs  Fib.hss  FibPrelude.hs  Makefile  WWSplitTactic.hss  WWTactic.hss  blog.txt
examples/fib-stream/: .gitignore  Fib.hs  Fib.hss  Makefile  Stream.hs  WWSplitTactic.hss
examples/fib-tuple/: Fib.hs  Fib.hss  Makefile  WW-Ass-A.hss  WWSplitTactic.hss  blog.txt
examples/first/: CriterionFib.hs  Main.hermit  Main.hs  Makefile
examples/fix-fusion/: FStrict.hss  Fusion.hs  Fusion.hss  PreconditionL.hss  PreconditionR.hss
examples/flatten/: Flatten.hec  Flatten.hs  Flatten.hss  HList.hs  Makefile  StrictRepH.hss
examples/hanoi/: Hanoi.hs  Hanoi.hss  HanoiPrelude.hs  Makefile
examples/induction/: .gitignore  BaseCase.her  BaseCase.hss  Induction.hs  InductionDemo.hss  InductiveStep.her  InductiveStep.hss  Verify.hec
examples/last/: Last.hs  Last.hss  Makefile  NewLast.hss  WW-Ass-B.hss  last.txt
examples/laws/: All.hec  Identity.hec  Laws.hs  List.hec  ListLaws.hs  Map-Functor.hec  Map-Monoid.hec  Maybe.hec  Start.hec  Tree.hec  iverify-map-append.hec  verify-append-assoc.hec  verify-append-nil.hec  verify-append-nonempty.hec  verify-concat-nonempty.hec  verify-concat-of-toList.hec  verify-concat-unit.hec  verify-left-unit.hec  verify-list-monad-assoc.hec  verify-list-monoid-assoc.hec  verify-list-monoid-right.hec  verify-list-right-unit.hec  verify-map-append.hec  verify-map-compose.hec  verify-map-nonempty.hec  verify-monad-assoc.hec  verify-nil-append.hec  verify-right-unit.hec
examples/length/: .gitignore  Length.hs  Length.hss  LengthFull.hs  LengthFull.hss  StrictRep.hss  WW-Ass-A.hss
examples/map/: Makefile  Map.hs  Map.hss
examples/map-fusion/: MapFusion.hec  MapFusion.hs  README
examples/mean/: Makefile  Mean.hs  Mean.hss
examples/monad-laws/: Laws.txt  ListLaws.hs  MaybeLaws.hs  list-monad-assoc-lhs.her  list-monad-assoc-rhs.her  verify-append-assoc.hec  verify-append-nil.hec  verify-concat-append.hec  verify-concat-concat.hec  verify-concat-of-toList.hec  verify-left-unit.hec  verify-list-left-unit.hec  verify-list-monad-assoc.hec  verify-list-monoid-left.hec  verify-map-concat.hec  verify-maybe-assoc.hec  verify-monad-assoc.hec  verify-right-unit.hec
examples/new_reverse/: HList.hs  Reverse.hec  Reverse.hs  Reverse.hss
examples/nub/: Nub.hs  Nub.hss  Revised.hs  Revised.txt  blog.txt
examples/original_reverse/: HList.hs  Reverse.hs  Reverse.hss
examples/qsort/: HList.hs  Makefile  QSort.hs  QSort.hss  WW-Ass-A.hss
examples/reverse/: Bug.hss  HList.hs  Makefile  OldReverse.hss  Reverse.hermit  Reverse.hs  Reverse.hss  StrictRepH.hss  WW-Ass-A.hss
examples/reverseWW/: HList.hs  Reverse.hss
optimizations/: README
optimizations/pretty/hermit-pretty/: hermit-pretty.cabal
optimizations/pretty/hermit-pretty/HERMIT/: Pretty.hs
optimizations/streamfusion/: Concat.hs  Deep.hs  Deep.hss  Intuition.hs  Intuition.hss  Main.hs  Makefile  PaperResults.hs  README
optimizations/streamfusion/hermit-streamfusion/: LICENSE  README  hermit-streamfusion.cabal
optimizations/streamfusion/hermit-streamfusion/HERMIT/Optimization/: StreamFusion.hs
optimizations/streamfusion/hermit-streamfusion/HERMIT/Optimization/StreamFusion/: Base.hs  List.hs  Prelude.hs  Vector.hs
optimizations/syb/: README  Sum.hs
optimizations/syb/syb-opt/: syb-opt.cabal
optimizations/syb/syb-opt/HERMIT/: SYB.hs
optimizations/syb/syb-opt/HERMIT/Optimization/: SYB.hs
optimizations/syb/syb-opt/HERMIT/Optimization/SYB/: Prelude.hs
scripts/: hermit.pl  runtests.pl
src/: HERMIT.hs
src/HERMIT/: Context.hs  Core.hs  Dictionary.hs  Driver.hs  Equality.hs  Exception.hs  External.hs  GHC.hs  Interp.hs  Kernel.hs  Kure.hs  Lemma.hs  Monad.hs  Name.hs  Optimize.hs  Parser.y  ParserCore.y  ParserType.y  Plugin.hs  PrettyPrinter.hs  Syntax.hs  Utilities.hs
src/Language/: HERMIT.hs
tests/: CabalSandboxConfig.hs  Main.hs  README  README.md  Test.hs
tests/golden/: concatVanishes_Flatten_hs_Flatten_hss.ref  concatVanishes_QSort_hs_QSort_hss.ref  concatVanishes_Rev_hs_Rev_hss.ref  evaluation_Eval_hs_Eval_hss.ref  factorial_Fac_hs_Fac_hss.ref  fib-tuple_Fib_hs_Fib_hss.ref  flatten_Flatten_hs_Flatten_hec.ref  flatten_Flatten_hs_Flatten_hss.ref  hanoi_Hanoi_hs_Hanoi_hss.ref  last_Last_hs_Last_hss.ref  last_Last_hs_NewLast_hss.ref  map_Map_hs_Map_hss.ref  mean_Mean_hs_Mean_hss.ref  new_reverse_Reverse_hs_Reverse_hec.ref  new_reverse_Reverse_hs_Reverse_hss.ref  nub_Nub_hs_Nub_hss.ref  qsort_QSort_hs_QSort_hss.ref  reverse_Reverse_hs_Reverse_hss.ref
tests/golden-ghc-7.10.3/: flatten_Flatten_hs_Flatten_hec.ref  last_Last_hs_Last_hss.ref  last_Last_hs_NewLast_hss.ref  new_reverse_Reverse_hs_Reverse_hec.ref
tests/golden-ghc-7.11/: concatVanishes_Flatten_hs_Flatten_hss.ref  concatVanishes_QSort_hs_QSort_hss.ref  concatVanishes_Rev_hs_Rev_hss.ref  evaluation_Eval_hs_Eval_hss.ref  fib-tuple_Fib_hs_Fib_hss.ref  flatten_Flatten_hs_Flatten_hec.ref  mean_Mean_hs_Mean_hss.ref  new_reverse_Reverse_hs_Reverse_hec.ref  nub_Nub_hs_Nub_hss.ref  qsort_QSort_hs_QSort_hss.ref
tests/prims/: Append.hermit  Append.hs  BetaReduce.hermit  BetaReduce.hs  Case.hermit  Case.hs  (+14 more)
(+245 files in other folders)
