name:                hermit-pretty
version:             0.1.0.0
author:              Andrew Farmer
maintainer:          afarmer@ittc.ku.edu
build-type:          Simple
cabal-version:       >=1.14

library
    exposed-modules:
        HERMIT.Pretty
    build-depends:
        base,
        ghc >= 7.6,
        hermit,
        template-haskell
    default-language: Haskell2010
    ghc-options: -Wall
