name:                hermit-streamfusion
version:             0.1.0.0
synopsis:            Stream Fusion optimization for lists implemented as a HERMIT plugin.
-- description:
homepage:            https://github.com/ku-fpg/hermit
license:             BSD3
license-file:        LICENSE
author:              Andrew Farmer
maintainer:          afarmer@ittc.ku.edu
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.14

library
    exposed-modules:
        HERMIT.Optimization.StreamFusion
        HERMIT.Optimization.StreamFusion.List
        HERMIT.Optimization.StreamFusion.Vector

    other-modules:
        HERMIT.Optimization.StreamFusion.Base

    build-depends:
        base,
        containers,
        data-default,
        ghc >= 7.6,
        hermit,
        template-haskell,
        vector

    ghc-options: -Wall
    default-language: Haskell2010
