name:                syb-opt
version:             0.1.0.0
author:              Andrew Farmer
maintainer:          afarmer@ittc.ku.edu
build-type:          Simple
cabal-version:       >=1.14

library
    exposed-modules:
        HERMIT.Optimization.SYB
        HERMIT.Optimization.SYB.Prelude
    build-depends:
        base,
        ghc >= 7.6,
        ghc-prim,
        hermit,
        syb,
        template-haskell,
        containers
    default-language: Haskell2010
