name:                hermit-second
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Andrew Farmer
maintainer:          afarmer@ittc.ku.edu
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     SecondDemo
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       ghc >= 7.6,
                       hermit,
                       template-haskell

  -- hs-source-dirs:      
  default-language:    Haskell2010
